2009-06-22  Lars Hartmann  <lars (at) chaotika (dot) org>

	Removed obsolete non-asciidoc files:
	* doc/xpak.5: removed.
	* doc/xpak.txt: removed.
	* doc/xpak.html: removed.
	* doc/Makefile.am: removed xpak.txt and xpak.html from doc_DATA
	and EXTRA_DIST.

	* doc/Makefile.am (EXTRA_DIST): added asciidoc file to
	distribution.

2009-06-10  Lars Hartmann  <lars (at) chaotika (dot) org>

	* configure.ac: replaced bash code by POSIX sh code.

	* doc/xpak.5.txt: rewritten doc/xpak.txt in asciidoc.
	added "DEDICATED TO" section.
	added "CREDITS" section.

2009-06-08  Lars Hartmann  <lars (at) chaotika (dot) org>

	* release.sh: removed lzma distribution and added zip
	distribution.

2009-06-05  Lars Hartmann  <lars (at) chaotika (dot) org>

	* release.sh: added copyright header.
	added option to sign generated distribution-archives.
	added option to give version string as parameter.

	* build_release.sh: renamed to release.sh.

	* doc/xpak.html: added html version of doc/xpak.txt.

2009-05-29  Lars Hartmann  <lars (at) chaotika (dot) org>

	Added lpatom_compile:
	* test/03_lpatom_parse.c: added test for lpatom_compile.
	* src/liblpatom.c (lpatom_compile): added.

	Added lpversion_compile:
	* test/02_lpversion_parse.c: added test for lpversion_compile.
	* src/liblpversion.c (lpversion_suffix_compile): added.
	(lpversion_version_compile): added.
	(lpversion_compile): added.

2009-05-28  Lars Hartmann  <lars (at) chaotika (dot) org>

	Added header for replacement functions:
	* src/liblputil.c: ainclude replace.h
	* src/Makefile.am (AM_CPPFLAGS): added replace-dir.
	* replace/Makefile.am (EXTRA_DIST): added replace.h to the
	distribution package.
	* replace/replace.h: added.

	* replace/stpcpy.c (stpcpy): fixed memory error.

	* src/liblputil.c (lputil_joinstr): rewritten to use stpcpy(3)
	instead of strcat(3).

	Added replacement for stpcpy:
	* replace/stpcpy.c (stpcpy): added.
	* configure.ac (AC_REPLACE_FUNCS): added stpcpy.

	added lputil_int64len: